fix(vhelper): ensure proper overflow for vertical and horizontal helpers

--- a/projects/igniteui-angular/core/src/core/styles/components/_common/_igx-vhelper.scss
+++ b/projects/igniteui-angular/core/src/core/styles/components/_common/_igx-vhelper.scss
@@ -13,10 +13,12 @@
     top: 0;
     inset-inline-end: 0;
     width: var(--vhelper-scrollbar-size);
+    overflow-x: hidden;
 }
 
 %vhelper--horizontal {
     width: 100%;
+    overflow-y: hidden;
 }
 
 %vhelper-content--vertical {
